2009-08-19  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: enable merged and diff reports in non debug mode,
	  since they are stable enough (diff has still one non fatal problem
	  left).

	* igprof-navigator: more fixes for the diff output. Ignore empty
	  queries.

2009-08-13  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: Initial support for diff output.
	  * Read percentages from database, rather than calculate them on the fly.
	  * Supports negative percentages.

	* igprof-navigator: print out summary header only if possible.

	* igprof-navigator: Print out some debug information if internal variable 
	  "debug" is True.

	* IgProfAnalyse.cc: SQLITE output schema now contains percentage
	  information to avoid having to have the percentage logic in the 
	  web browing GUI.

	* IgProfAnalyse.cc: Helper method for printing out percentages added.
	 
2009-08-12  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: supports _merged and _diff25 suffix in debug
	  mode. Ignores them in non debug mode.

2009-08-07  Giulio Eulisse <giulio.eulisse@cern.ch>

	* ChangeLog: correct dates for the last two entries.

	* IgProfAnalyse.cc: gracefully exits if the wrong counter name is
	  passed by the user. Thanks to Andreas for reporting the bug.

	* igprof-navigator: support for IgProfMemLive and IgProfMemMax named
	  files added until some decision is actually made on the naming
	  convention. 

2009-08-06  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fixes a bug where dates were not taken into 
	  account when splitting results in multiple tables. 

	* igprof-navigator: cosmetic fixes. 

2009-07-27  Giulio Eulisse <giulio.eulisse@cern.ch>

	* igprof-navigator: fixes a bug where dates were not taken into
	  account when splitting results in multiple tables.

	* 

	* igprof-navigator: link back to the index added to the summary page.

	* igprof-navigator: improved header for the summary.
